fix: remove navbar brand spacing conflict with flush buttons

--- a/theme/assets/scss/_bootscore-variables.scss
+++ b/theme/assets/scss/_bootscore-variables.scss
@@ -149,3 +149,6 @@ $dropdown-link-active-color: $gray-900;
 // Badge
 $badge-border-radius: $radius;
 $badge-font-weight: 500;
+
+// Navbar
+$navbar-brand-padding-y: 0;
